--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Quality Assurance 5: American / British English Translator",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "mocha --timeout 5000 --require @babel/register --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
@@ -18,8 +18,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.5.0",
-    "mocha": "^10.2.0",
-    "nodemon": "^3.0.1"
+    "mocha": "^10.2.0"
   },
   "license": "MIT"
 }
